# hddfancontrol

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
tests/: __init__.py  test_main.py
